Using a toast instead of a debug message

--- a/src/main/resources/assets/rad/lang/ru_ru.json
+++ b/src/main/resources/assets/rad/lang/ru_ru.json
@@ -1,4 +1,5 @@
 {
-  "reload_audio_driver.success": "Аудиодрайверы успешно перезагружены!",
-  "reload_audio_driver.details": "F3 + R = Перезагрузить аудиодрайверы"
+  "reload_audio_driver.details": "F3 + R = Перезагрузить аудиодрайверы",
+  "reload_audio_driver.toast.title": "Перезагрузить аудиодрайверы",
+  "reload_audio_driver.toast.body": "Аудиодрайверы успешно перезагружены!"
 }
