--- a/src/main/resources/assets/rad/lang/ru_ru.lang
+++ b/src/main/resources/assets/rad/lang/ru_ru.lang
@@ -1,2 +1,3 @@
-reload_audio_driver.success=Аудиодрайверы успешно перезагружены!
 reload_audio_driver.details=F3 + R = Перезагрузить аудиодрайверы
+reload_audio_driver.toast.title=Перезагрузить аудиодрайверы
+reload_audio_driver.toast.body=Аудиодрайверы успешно перезагружены!
